[gd_scene load_steps=7 format=2]

[ext_resource path="res://Utils/Overlap/InteractionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/Shadows/LargeShadow.png" type="Texture" id=3]
[ext_resource path="res://World/Objects/Minerals/MineralDepositWorldComponent.gd" type="Script" id=4]
[ext_resource path="res://Utils/Actions/MineAction.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.99996
height = 14.0001

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 14.0

[node name="MineralDepositWorldComponent" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 1.07288e-06, 0.5 )
scale = Vector2( 1, 0.7 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="InteractionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="InteractionZone" index="0"]
position = Vector2( -1, -1 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="MineAction" parent="InteractionZone/Actions" index="0" instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="InteractionZone"]
